# DashMaster

./: .gitignore  Makefile  README.md
apps/companion/: pyproject.toml
apps/companion/dashmaster/: main.py
apps/companion/dashmaster/api/: actions.py  devices.py  ota.py  schema.py  stream.py  upload.py
apps/companion/dashmaster/core/: events.py  http_client.py
apps/companion/dashmaster/models/: devices.py
apps/companion/dashmaster/scripts/: seed_registry.py
apps/companion/dashmaster/store/: alembic.ini  database.py  models.py  registry.py
apps/companion/dashmaster/store/migrations/: __init__.py  env.py
apps/companion/dashmaster/tests/: device_emulator.py  test_actions.py  test_templates.py  test_upload.py  test_upload_stub.py
apps/companion/dashmaster/util/: flags.py  hashing.py  schema.py  storage.py
apps/proxy/python-portmap/: portmap.py
apps/proxy/traefik/: dynamic.yml  traefik.yml
apps/web/: package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: app.css  app.d.ts
apps/web/src/lib/: api.ts  types.ts
apps/web/src/routes/: +layout.svelte
apps/web/src/routes/(app)/deploy/: +page.svelte
firmware/full/data/: app.js  frontdoor.html  index.html
firmware/full/src/: http_api.cpp  sse.cpp  storage.cpp
firmware/lite/src/: main.cpp
infra/docker/: compose.yaml
reservations/: registry.json
templates/: birth.json  config.json  layout.json  rules.json
templates/\$schema/: birth.schema.json  board_map.schema.json  config.schema.json  layout.schema.json  rules.schema.json  schema.schema.json
(+2 files in other folders)
