[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dashmaster-companion"
version = "0.1.0"
description = "DashMaster companion FastAPI service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "python-json-logger>=2.0",
    "jsonschema>=4.21",
    "sse-starlette>=1.8.2",
    "tenacity>=8.2",
    "python-multipart>=0.0.9",
    "pytest>=8.2.0"
]

[tool.setuptools.packages.find]
where = ["dashmaster"]
